# air-gap-deploy-kit

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  QUIRKS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml
demo/: demo.tape
kit/: __init__.py  cli.py
kit/bundle/: __init__.py  docker_bundler.py  manifest.py  model_bundler.py  wheel_bundler.py
kit/deploy/: __init__.py  installer.py  verifier.py
kit/rehearse/: __init__.py  rehearser.py
kit/report/: __init__.py  bootstrap.py  builder.py  install_doc.py
samples/: bundle_manifest_sample.json
tests/: test_bundle.py  test_bundle_bootstrap.py  test_cli_bundle_inputs.py  test_cli_manifest_check.py  test_manifest.py  test_rehearse.py  test_rehearse_docker.py  test_verifier.py  test_version.py
