[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-gap-deploy-kit"
version = "1.1.0"
description = "Air-gapped deployment toolkit for the acme-parts-cloud stack"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steven Espinoza" }]
keywords = ["air-gap", "offline", "deployment", "docker", "wheels"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "httpx>=0.27,<1",
]

[project.urls]
Repository = "https://github.com/RedBeret/air-gap-deploy-kit"
Issues = "https://github.com/RedBeret/air-gap-deploy-kit/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "ruff>=0.4"]

[project.scripts]
kit = "kit.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["kit*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["docker: integration tests requiring a preloaded image and Docker daemon"]
